--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
