--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.8.1",
     "formik": "^2.2.9",
     "next": "^12.1.6",
+    "pushid": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
