--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "firebase": "^9.8.1",
     "formik": "^2.2.9",
+    "interweave": "^13.0.0",
     "next": "^12.1.6",
     "pushid": "^1.0.0",
     "react": "^18.1.0",
