--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "problem-bank",
+  "name": "lade",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
-    "firebase": "^9.8.1",
-    "formik": "^2.2.9",
-    "interweave": "^13.0.0",
-    "next": "^12.1.6",
-    "pushid": "^1.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "react-quill": "^1.3.5",
-    "react-redux": "^8.0.1",
-    "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.0.3"
   }
 }
