--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "markdown-it": "^13.0.1",
+    "markdown-it-mathjax3": "^4.3.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +24,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
