--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.19.1",
     "markdown-it": "^13.0.1",
     "markdown-it-mathjax3": "^4.3.2",
     "next": "13.2.4",
