--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "typescript": "5.0.3",
-    "yup": "^1.2.0"
+    "typescript": "5.0.3"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
