--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react-dom": "18.0.11",
     "@uiw/react-markdown-editor": "^5.11.1",
     "clsx": "^1.2.1",
-    "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "formik": "^2.3.2",
@@ -24,13 +23,16 @@
     "next-remove-imports": "^1.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "typescript": "5.0.3"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
   }
 }
