--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-remove-imports": "^1.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
