--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
 		"@types/node": "18.15.11",
-		"@types/react": "18.2.0",
-		"@types/react-dom": "18.2.0",
+		"@types/react": "18.0.31",
+		"@types/react-dom": "18.0.11",
 		"@uiw/react-markdown-editor": "^5.11.1",
 		"clsx": "^1.2.1",
 		"eslint-config-next": "13.2.4",
@@ -35,6 +35,6 @@
 		"eslint": "^8.41.0",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.3.1",
-		"typescript": "^5.0.4"
+		"typescript": "4.8.4"
 	}
 }
