--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.7.1",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@types/node": "18.15.11",
 		"@types/react": "18.0.31",
@@ -34,6 +35,7 @@
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.41.0",
 		"postcss": "^8.4.21",
+		"prisma": "^5.7.1",
 		"tailwindcss": "^3.3.1",
 		"typescript": "4.8.4"
 	}
