--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@typescript-eslint/parser": "^5.59.7",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.41.0",
+		"lefthook": "^1.5.5",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.3.1",
 		"typescript": "4.8.4"
