refactor: linting remove unused code

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,6 +1,6 @@
 pre-commit:
   parallel: true
   commands:
-    eslint:
-      glob: "*.{js,ts,jsx,tsx}"
-      run: npm run lint {staged_files}
+    lint:
+      glob: '*.{js,ts,jsx,tsx}'
+      run: npm run lint
