--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-	"name": "lade",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev -p 8000",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@reduxjs/toolkit": "^1.9.5",
-		"@types/node": "18.15.11",
-		"@types/react": "18.0.31",
-		"@types/react-dom": "18.0.11",
-		"@uiw/react-markdown-editor": "^5.11.1",
-		"clsx": "^1.2.1",
-		"eslint-config-next": "13.2.4",
-		"firebase": "^9.19.1",
-		"formik": "^2.3.2",
-		"markdown-it": "^13.0.1",
-		"markdown-it-mathjax3": "^4.3.2",
-		"next": "13.2.4",
-		"next-remove-imports": "^1.0.10",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.8.0",
-		"react-redux": "^8.1.0"
-	},
-	"devDependencies": {
-		"@types/markdown-it": "^12.2.3",
-		"@typescript-eslint/eslint-plugin": "^5.59.7",
-		"@typescript-eslint/parser": "^5.59.7",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.41.0",
-		"lefthook": "^1.5.5",
-		"postcss": "^8.4.21",
-		"tailwindcss": "^3.3.1",
-		"typescript": "4.8.4"
-	}
+  "name": "lade",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 8000",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
+    "@uiw/react-markdown-editor": "^5.11.1",
+    "clsx": "^1.2.1",
+    "eslint-config-next": "13.2.4",
+    "firebase": "^9.19.1",
+    "formik": "^2.3.2",
+    "markdown-it": "^13.0.1",
+    "markdown-it-mathjax3": "^4.3.2",
+    "next": "13.2.4",
+    "next-remove-imports": "^1.0.10",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/markdown-it": "^12.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lefthook": "^1.5.5",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
+    "typescript": "4.8.4"
+  }
 }
