--- a/package.json
+++ b/package.json
@@ -1,45 +1,58 @@
 {
   "name": "lade",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "repository": "git@github.com:josejovian/lade.git",
   "private": true,
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
+    "@reduxjs/toolkit": "^2.0.1",
     "@uiw/react-markdown-editor": "^6.0.0",
-    "clsx": "^1.2.1",
-    "eslint-config-next": "13.2.4",
-    "firebase": "^9.19.1",
-    "formik": "^2.3.2",
-    "markdown-it": "^13.0.1",
+    "clsx": "^2.0.0",
+    "firebase": "^10.7.1",
+    "formik": "^2.4.5",
+    "markdown-it": "^14.0.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "next": "13.2.4",
+    "next": "^14.0.4",
     "next-remove-imports": "^1.0.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "react-redux": "^8.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
+    "@babel/runtime": ">=7.10.0",
+    "@babel/types": "^7.23.6",
+    "@codemirror/autocomplete": ">=6.0.0",
+    "@codemirror/language": ">=6.0.0",
+    "@codemirror/lint": ">=6.0.0",
+    "@codemirror/search": ">=6.0.0",
+    "@codemirror/state": ">=6.0.0",
+    "@codemirror/theme-one-dark": ">=6.0.0",
+    "@codemirror/view": ">=6.0.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/markdown-it": "^12.2.3",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
+    "codemirror": ">=6.0.0",
     "eslint": "^8.41.0",
+    "eslint-config-next": "13.2.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lefthook": "^1.5.5",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "webpack": ">=5"
   }
 }
