--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
@@ -35,8 +36,10 @@
     "@codemirror/state": ">=6.0.0",
     "@codemirror/theme-one-dark": ">=6.0.0",
     "@codemirror/view": ">=6.0.0",
+    "@lezer/common": "^1.0.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
