--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "@uiw/react-markdown-editor": "^6.0.0",
-    "clsx": "^2.0.0",
-    "firebase": "^10.7.1",
-    "formik": "^2.4.5",
-    "markdown-it": "^14.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-dom": "18.0.11",
+    "@uiw/react-markdown-editor": "^5.11.1",
+    "clsx": "^1.2.1",
+    "firebase": "^9.19.1",
+    "formik": "^2.3.2",
+    "markdown-it": "^13.0.1",
     "markdown-it-mathjax3": "^4.3.2",
-    "next": "^14.0.4",
-    "next-remove-imports": "^1.0.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-redux": "^9.0.4"
+    "next": "13.2.4",
+    "next-remove-imports": "^1.0.10",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/runtime": ">=7.10.0",
@@ -44,8 +45,8 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "codemirror": ">=6.0.0",
     "cypress": "^13.6.1",
