--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react": "18.0.31",
 		"@types/react-dom": "18.0.11",
 		"@uiw/react-markdown-editor": "^5.11.1",
+		"axios": "^1.6.2",
 		"clsx": "^1.2.1",
 		"eslint-config-next": "13.2.4",
 		"firebase": "^9.19.1",
