--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"clsx": "^1.2.1",
 		"eslint-config-next": "13.2.4",
 		"firebase": "^9.19.1",
+		"firebase-admin": "^12.0.0",
 		"formik": "^2.3.2",
 		"markdown-it": "^13.0.1",
 		"markdown-it-mathjax3": "^4.3.2",
 		"next": "13.2.4",
+		"next-auth": "^4.24.5",
 		"next-remove-imports": "^1.0.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
