--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
-		"react-redux": "^8.1.0"
+		"react-redux": "^8.1.0",
+		"redux-persist": "^6.0.0"
 	},
 	"devDependencies": {
 		"@types/markdown-it": "^12.2.3",
+		"@types/redux-persist": "^4.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.7",
 		"@typescript-eslint/parser": "^5.59.7",
 		"autoprefixer": "^10.4.14",
