--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"formik": "^2.3.2",
 		"markdown-it": "^13.0.1",
 		"markdown-it-mathjax3": "^4.3.2",
-		"next": "13.2.4",
+		"next": "^14.1.2",
 		"next-auth": "^4.24.5",
 		"next-remove-imports": "^1.0.10",
 		"react": "18.2.0",
