--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.15.14",
+		"@mui/material": "^5.15.14",
 		"@prisma/client": "^5.7.1",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@types/node": "18.15.11",
@@ -28,7 +32,6 @@
 		"next-remove-imports": "^1.0.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-icons": "^4.8.0",
 		"react-redux": "^8.1.0",
 		"redux-persist": "^6.0.0"
 	},
