--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev -p 8000",
 		"build": "next build",
 		"start": "next start -p 8000",
-		"lint": "next lint"
+		"lint": "next lint",
+		"button-style": "node scripts/style.js"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.4",
