--- a/package.json
+++ b/package.json
@@ -7,45 +7,46 @@
 		"build": "next build",
 		"start": "next start -p 8000",
 		"lint": "next lint",
-		"button-style": "node scripts/style.js"
+		"button-style": "node scripts/style.js",
+		"theme-style": "node scripts/theme.js"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.11.4",
-		"@emotion/styled": "^11.11.0",
-		"@mui/icons-material": "^5.15.14",
-		"@mui/material": "^5.15.14",
-		"@prisma/client": "^5.7.1",
-		"@reduxjs/toolkit": "^1.9.5",
+		"@emotion/react": "11.11.4",
+		"@emotion/styled": "11.11.0",
+		"@mui/icons-material": "5.15.14",
+		"@mui/material": "5.15.14",
+		"@prisma/client": "5.7.1",
+		"@reduxjs/toolkit": "1.9.5",
 		"@types/node": "18.15.11",
 		"@types/react": "18.0.31",
 		"@types/react-dom": "18.0.11",
-		"@uiw/react-markdown-editor": "^5.11.1",
-		"axios": "^1.6.2",
-		"clsx": "^1.2.1",
+		"@uiw/react-markdown-editor": "5.11.1",
+		"axios": "1.6.2",
+		"clsx": "1.2.1",
 		"eslint-config-next": "13.2.4",
-		"firebase": "^9.19.1",
-		"firebase-admin": "^12.0.0",
-		"formik": "^2.3.2",
-		"markdown-it": "^13.0.1",
-		"markdown-it-mathjax3": "^4.3.2",
-		"next": "^14.1.2",
-		"next-auth": "^4.24.5",
-		"next-remove-imports": "^1.0.10",
+		"firebase": "9.19.1",
+		"firebase-admin": "12.0.0",
+		"formik": "2.3.2",
+		"markdown-it": "13.0.1",
+		"markdown-it-mathjax3": "4.3.2",
+		"next": "14.1.2",
+		"next-auth": "4.24.5",
+		"next-remove-imports": "1.0.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-redux": "^8.1.0",
-		"redux-persist": "^6.0.0"
+		"react-redux": "8.1.0",
+		"redux-persist": "6.0.0"
 	},
 	"devDependencies": {
-		"@types/markdown-it": "^12.2.3",
-		"@types/redux-persist": "^4.3.1",
-		"@typescript-eslint/eslint-plugin": "^5.59.7",
-		"@typescript-eslint/parser": "^5.59.7",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.41.0",
-		"postcss": "^8.4.21",
-		"prisma": "^5.7.1",
-		"tailwindcss": "^3.3.1",
+		"@types/markdown-it": "12.2.3",
+		"@types/redux-persist": "4.3.1",
+		"@typescript-eslint/eslint-plugin": "5.59.7",
+		"@typescript-eslint/parser": "5.59.7",
+		"autoprefixer": "10.4.14",
+		"eslint": "8.41.0",
+		"postcss": "8.4.21",
+		"prisma": "5.7.1",
+		"tailwindcss": "3.3.1",
 		"typescript": "4.8.4"
 	}
 }
