--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"build": "next build",
 		"start": "next start -p 8000",
 		"lint": "next lint",
-		"button-style": "node scripts/style.js",
-		"theme-style": "node scripts/theme.js"
+		"button": "node scripts/button.js"
 	},
 	"dependencies": {
 		"@emotion/react": "11.11.4",
