--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start -p 8000",
 		"lint": "next lint",
-		"button": "node scripts/button.js"
+		"style-button": "node scripts/button.js",
+		"style-tag": "node scripts/tag.js"
 	},
 	"dependencies": {
 		"@emotion/react": "11.11.4",
