--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
 		"markdown-it-mathjax3": "4.3.2",
 		"next": "14.1.2",
 		"next-auth": "4.24.5",
+		"next-query-params": "^5.0.0",
 		"next-remove-imports": "1.0.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-redux": "8.1.0",
-		"redux-persist": "6.0.0"
+		"redux-persist": "6.0.0",
+		"use-query-params": "2.2.1"
 	},
 	"devDependencies": {
 		"@types/markdown-it": "12.2.3",
