--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"markdown-it-mathjax3": "4.3.2",
 		"next": "14.1.2",
 		"next-auth": "4.24.5",
-		"next-query-params": "^5.0.0",
+		"next-query-params": "5.0.0",
 		"next-remove-imports": "1.0.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
